# Nicrypt

./: README.md  index.html  package-lock.json  package.json  setup_env.sh  start_demo.sh  vite.config.js
contracts/inco/: EncryptedStore.sol
contracts/solana/: confidential-transfer.ts
middleware/: Cargo.toml
middleware/src/: main.rs  obfuscation.rs  pool.rs  relay_server.rs
src/: App.jsx  Minimal.jsx  index.css  main.jsx
src/components/Dashboard/: PulseDashboard.jsx
src/components/Egress/: EgressDashboard.jsx  SolvencyQR.jsx
src/components/Gate/: VerificationModal.jsx
src/components/Layout/: LandingPage.jsx  MainLayout.jsx
src/components/Sidebar/: IntelligenceFeed.jsx
src/contracts/: EncryptedStorage.sol
src/hooks/: useNicryptEgress.js  useNicryptIngress.js  useNicryptVault.js  useSolanaBalance.js  useSovereignEgress.js
src/modules/: IdentityModule.js  IncoModule.js  SecurityModule.js  SolanaModule.js  ThreatMonitor.js
src/modules/egress/: confidentialSettlement.js  walletGen.js
src/modules/zk/: SchnorrProver.js
