[package]
name = "nicrypt-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
env_logger = "0.10"

# Cryptography - Bulletproofs & Elliptic Curves
curve25519-dalek-ng = "4.1"
bulletproofs = "4.0"
merlin = "3.0"  # For transcript management in proofs
